// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty render 1`] = `


<div
  className="uast-viewer"
  onMouseOut={[Function]}
  style={
    Object {
      "overflow": "auto",
    }
  }
/>
`;

exports[`search results empty 1`] = `
.dSUuhc {
  width: 100%;
  padding: 1rem 0;
  -webkit-text-align: center;
  text-align: center;
}

<div
  className="sc-bdVaJa dSUuhc"
>
  Nothing found
</div>
`;

exports[`search results render 1`] = `


<div
  className="uast-viewer"
  onMouseOut={[Function]}
  style={
    Object {
      "overflow": "auto",
    }
  }
>
  <div
    className="uast-item"
    onMouseMove={[Function]}
  >
    <div
      className="uast-title uast-title-collapsible collapsed"
      onClick={[Function]}
    >
      <summary
        className="uast-label"
      >
        Node
      </summary>
    </div>
  </div>
</div>
`;

exports[`tree render 1`] = `


<div
  className="uast-viewer"
  onMouseOut={[Function]}
  style={
    Object {
      "overflow": "auto",
    }
  }
>
  <div
    className="uast-item"
    onMouseMove={[Function]}
  >
    <div
      className="uast-title uast-title-collapsible collapsed"
      onClick={[Function]}
    >
      <summary
        className="uast-label"
      >
        Node
      </summary>
    </div>
  </div>
</div>
`;
